# se2lam

./: .gitignore  20191022readme  CMakeLists.txt  README.MD  README.md  _clang-format  build.sh  package.xml  readme.txt  rviz.rviz
CMakeModules/: FindCholmod.cmake  FindSuiteSparse.cmake
data/se2_config/: DeskImuShape.txt  Settings.yml  Settings.yml.old
dependencies/cholmod/lib/: lists.txt
dependencies/line_descriptor/include/: cv_cpu_config.h  line_descriptor.hpp
dependencies/line_descriptor/include/line_descriptor/: descriptor.hpp
include/se2lam/: Config.h  EdgeSE2XYZ.h  EdgeSE3Line.h  ExtractLineSegment.h  Frame.h  FramePublish.h  GlobalMapper.h  KeyFrame.h  LSDmatcher.h  LineDetection.h  LineDetector.h  LocalMapper.h  Localizer.h  Map.h  MapPoint.h  MapPublish.h  MapStorage.h  ORBVocabulary.h  ORBextractor.h  ORBmatcher.h  OdoSLAM.h  Preprocess.h  ReadImageImu.h  Sensors.h  Sparsifier.h  Track.h  TrackKlt.h  converter.h  cvutil.h  gms_matcher.h  lineDetection.h  optimizer.h  readImageImu.h  sparsifier.h  utility.h
launch/: run_pipeline.launch
rk/: CMakeLists.txt  ICPtrajectory.cpp  lineDetection.cpp  rkDataToRosbag.cpp  rkImageUndistort.cpp  rkOdomToSE2.cpp  se2lamKltGyroTrack.cpp  se2lamKltTrack.cpp  se2lamPipeline.cpp  test_rk.cpp
scripts/: drawKFTrajectoryICP.py  drawOdomCompair.py  drawOdomRaw.py  drawTrajectoryICP.py  test_frame.py
se2_config/: CamConfig.yml  Settings.yml
src/: Config.cpp  EdgeSE2XYZ.cpp  Frame.cpp  FramePublish.cpp  GlobalMapper.cpp  KeyFrame.cpp  LineDetection.cpp  LineDetector.cpp  LocalMapper.cpp  Localizer.cpp  Map.cpp  MapPoint.cpp  MapPublish.cpp  MapStorage.cpp  ORBextractor.cpp  ORBmatcher.cpp  OdoSLAM.cpp  Preprocess.cpp  ReadImageImu.cpp  Sensors.cpp  Sparsifier.cpp  Track.cpp  TrackKlt.cpp  converter.cpp  cvutil.cpp  lineDetection.cpp  optimizer.cpp  readImageImu.cpp  sparsifier.cpp
test/: CMakeLists.txt  TestTrack.cpp  TestTrack.h  TestTrack.hpp  TestViewer.hpp  datapub.cpp  rkOdomToSE2.cpp  run_pipeline.cpp  run_pipeline_fzu_dataset.cpp  testTrackKLT.cpp  testTrackKLT.h  test_Affine.cpp  test_BA.cpp  test_BA_Full.cpp  test_BA_SE2.cpp  test_BA_SE3.cpp  test_KLT.cpp  test_KeyLineMatch.cpp  test_KeyPointMatch.cpp  test_KltTracking.cpp  test_MapPointManager.cpp  test_SingleThreadTracking.cpp  test_dataPub.cpp  test_featureExtract.cpp  test_funcs.hpp  test_functions.hpp  test_imageUndistort.cpp  test_imgview.cpp  test_lineDetection.cpp  test_optimizer.hpp  test_pointDetection.cpp  test_rk.cpp  test_ros.cpp  test_vn.cpp
